# looplens

./: .gitignore  CHANGELOG.md  LAUNCH.md  LICENSE  PRD.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  cli.md  crewai.md  detectors.md  examples.md  frameworks.md  index.md  installation.md  langgraph.md  mcp.md  openai-agents.md  opentelemetry.md  quickstart.md  roadmap.md  sdk.md
examples/: handoff_bounce_agent.py  langgraph_agent.py  looping_agent.py  otel_openinference_openai.py  real_research_agent_openai.py  retry_storm_agent.py  simple_agent.py
looplens/: __init__.py  cli.py  config.py  sdk.py
looplens/integrations/: __init__.py  crewai.py  langgraph.py  openai_agents.py
looplens/mcp/: __init__.py  server.py
looplens/server/: __init__.py  __main__.py  app.py  db.py  detectors.py  ingest.py  metrics.py  models.py  otel.py  routes.py  websocket.py
tests/: test_crewai_integration.py  test_detectors.py  test_langgraph_integration.py  test_mcp.py  test_openai_agents_integration.py  test_otel_ingest.py  test_sdk.py  test_stream.py
traces/: sample_run.jsonl
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  lib.ts  main.tsx
ui/src/components/: Diagnosis.tsx  EventDrawer.tsx  MetricsBar.tsx  Timeline.tsx  WarningCard.tsx
ui/src/pages/: ComparePage.tsx  RunDetailPage.tsx  RunsPage.tsx
