[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "looplens"
version = "0.1.0"
description = "Local-first real-time debugger for AI agent loops — Chrome DevTools for agent loops."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ashutosh Rath" }]
keywords = ["ai", "agents", "observability", "debugging", "llm", "loops"]

# The base install is the SDK and is intentionally ZERO third-party deps so it
# can be dropped into any agent project (pure stdlib: urllib + threading + json).
# Everything needed to RUN the dashboard lives in the optional [server] extra.
dependencies = []

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "typer>=0.9",
    "watchdog>=3.0",
]
dev = [
    "looplens[server]",
    "pytest>=7.0",
    "httpx>=0.27",
]

[project.scripts]
looplens = "looplens.cli:main"

[project.urls]
Homepage = "https://github.com/ashutosh-rath02/looplens"
Repository = "https://github.com/ashutosh-rath02/looplens"

[tool.hatch.build.targets.wheel]
packages = ["looplens"]
# The built React dashboard lands in looplens/server/_ui (git-ignored). Force it
# into the wheel so `pip install "looplens[server]"` ships a ready-to-run UI with
# no Node/npm required at install or runtime. Run `npm --prefix ui run build`
# before `python -m build` / publishing.
artifacts = ["looplens/server/_ui/**/*"]
