[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "looplens"
version = "0.7.1"
description = "Local-first real-time debugger for AI agent loops — Chrome DevTools for agent loops."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ashutosh Rath" }]
keywords = ["ai", "agents", "observability", "debugging", "llm", "loops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# The base install is the SDK and is intentionally ZERO third-party deps so it
# can be dropped into any agent project (pure stdlib: urllib + threading + json).
# Everything needed to RUN the dashboard lives in the optional [server] extra.
dependencies = []

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "typer>=0.9",
    "watchdog>=3.0",
]
# Framework adapters (PRD section 21). Each imports its framework lazily, so the
# base SDK stays zero-dep; install the extra only if you use that framework.
langgraph = [
    "langgraph>=0.2",
]
openai-agents = [
    "openai-agents>=0.1",
]
crewai = [
    "crewai>=1.0",
]
# Universal OpenTelemetry ingestion: lets any framework with an OTLP exporter
# stream to /v1/traces. Only needed to decode OTLP/protobuf; OTLP/JSON works
# with no extra dependency.
otel = [
    "opentelemetry-proto>=1.0",
]
dev = [
    "looplens[server]",
    "pytest>=7.0",
    "httpx>=0.27",
    # The adapter only imports langchain-core; CI installs it to test the mapping.
    "langchain-core>=0.2",
    # OTLP/protobuf decoding, so CI exercises the protobuf path too.
    "opentelemetry-proto>=1.0",
    # OpenAI Agents SDK, so CI exercises the agents adapter mapping.
    "openai-agents>=0.1",
]

[project.scripts]
looplens = "looplens.cli:main"

[project.urls]
Homepage = "https://github.com/ashutosh-rath02/looplens"
Repository = "https://github.com/ashutosh-rath02/looplens"

[tool.hatch.build.targets.wheel]
packages = ["looplens"]
# The built React dashboard lands in looplens/server/_ui (git-ignored). Force it
# into the wheel so `pip install "looplens[server]"` ships a ready-to-run UI with
# no Node/npm required at install or runtime. Run `npm --prefix ui run build`
# before `python -m build` / publishing.
artifacts = ["looplens/server/_ui/**/*"]

[tool.hatch.build.targets.sdist]
# `python -m build` builds the sdist first, then builds the wheel FROM that
# sdist — so the UI bundle must be force-included here too, or the wheel built
# from the sdist ships without it. (The dir is git-ignored, hence `artifacts`.)
artifacts = ["looplens/server/_ui/**/*"]
